# dispatcher

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
src/: action_profile.rs  action_record.rs  audio_playback.rs  config.rs  file_io.rs  input_dispatcher.rs  input_recorder.rs  lib.rs  main.rs  normalize.rs  primary_dispatcher.rs  ui.rs  voice_req.rs
src/ui/: config_edit.rs  item_list.rs  main_ui.rs  message_display.rs  modal_dialog.rs  profile.rs  profile_edit.rs  profile_manager.rs  window_manager.rs
