[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
ort-sys = { version = "=2.0.0-rc.4", features = ["download-binaries", "copy-dylibs"] }
rdev = { path="../rdev/", features = ["serialize", "x11"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
#tokio = { version = "1", features = ["full"]}
voice-stream = "0.4.0"
vosk = "0.3.1"
