[package]
name = "dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
iced = "0.14.0"
ort-sys = { version = "=2.0.0-rc.4", features = ["download-binaries", "copy-dylibs"] }
rdev = { path="../rdev/", features = ["serialize", "x11"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["rt", "sync"]}
cpal = { version = "0.18.1", features = ["pulseaudio"] }
vosk = "0.3.1"
iced_aw = { version = "0.13.0", features=["selection_list"]}
rodio = "0.22.1"
